# 3DoF-Flight-Dynamics-Simulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: trajectory.csv
docs/: Control_Law.md  Theory.md
include/: Aero_model.h  Atmosphere.h  Integrator.h  State.h  Vehicle.h  csv_writer.h  simulator.h  vector2.h
src/: Aero_model.cpp  Atmosphere.cpp  csv_writer.cpp  main.cpp  simulator.cpp
